# Compiler_phase01

Compiler-phase01/Compiler/: CMakeLists.txt  DFA.cpp  DFA.h  DFAAndTokens.cpp  DFAAndTokens.h  MinDFA.cpp  MinDFA.h  NFARules.h  NFAToDFA.cpp  NFAToDFA.h  Node.cpp  Node.h  NonFiniteAutomata.cpp  NonFiniteAutomata.h  Symbol_table_builder.cpp  TempNFa.cpp  TempNFa.h  main.cpp
compiler_phase01/compilers/: CMakeLists.txt  DFAAndTokens.cpp  NFAToDFA.cpp  Node.cpp  NonFiniteAutomata.cpp  NonFiniteAutomata.h  Symbol_table_builder.cpp  Symbol_table_builder.h  Test.cpp  Test.h  main.cpp
